<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="address">Address:</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="enable_gps_dialog">GPS provider not enabled. Would you like to enable it?</string>
    <string name="latlng">Lat/Long:</string>
    <string name="unknown">--Unknown--</string>
    <string name="not_support_gps">GPS provider not supported</string>
    <string name="not_support_network">Network provider not supported</string>
    <string name="use_fine_provider">Fine-grain provider</string>
    <string name="use_both_providers">Both providers</string>
    <string name="api_key">Kmjtd%7Cluu22gurnq%2Can%3Do5-gzrl</string>
    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="clear">(clear)</string>
    <string name="settings">Settings</string>
    <string name="one">1</string>
    <string name="five">5</string>
    <string name="ten">10</string>
    <string name="rad_from_route">Radius from Route:</string>
    <string name="miles">miles</string>
    <string name="type_of_stop">Type of Stop:</string>
    <string name="eat_and_drink">Eat and Drink</string>
    <string name="see_and_do">See and Do</string>
    <string name="fuel_up">Fuel Up</string>
    <string name="rest_and_empty">Rest and Empty</string>
    <string name="sleep">Sleep</string>
    <string name="distance_from_here">Distance From Here:</string>
    <string name="ten_two">10</string>
    <string name="fifty">50</string>
    <string name="one_hundred">100</string>
    <string name="range_to_search">Range to Search:</string>
    <string name="specific">Specific:</string>
    <string name="search">SEARCH</string>
    <string name="search_hint">enter specific search term</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_route">Route</string>
    <string name="Road_Runner">RoadRunner</string>
    <string name="Go_To_Map">GO TO MAP</string>
    <string name="start_loaction">Littleton,CO</string>
    <string name="end_location">Troy,NY</string>
    <string name="title_activity_gpstracker">GPSTracker</string>
    <string name="final_search_text">Search</string>
    <string name="title_activity_connection_detector">ConnectionDetector</string>
    <string name="title_activity_alert_dialog_manager">AlertDialogManager</string>
    <string name="title_activity_place">Place</string>
    <string name="title_activity_place_list">PlaceList</string>
    <string name="title_activity_places_list">PlacesList</string>
    <string name="title_activity_place_details">PlaceDetails</string>
    <string name="title_activity_google_places">GooglePlaces</string>
    <string name="title_activity_list_main">ListMain</string>
    <string name="title_activity_single_place">SinglePlaceActivity</string>
    <string name="name_label">Name:</string>
    <string name="add_label">Address:</string>
    <string name="clear_route">Clear</string>
    <string name="create_route">Make Route</string>
    <string name="my_loc">My Location</string>
    <string name="start_place">San Francisco, CA</string>
    <string name="end_place">Fremont, CA</string>
    <string name="show_places_on_map">Show Places On Map</string>
    <string name="show_map">Show Map</string>
    <string name="show_itinerary">Itinerary</string>
    <string name="title_activity_get_stops">Get_stops</string>
    <string name="title_activity_query_places">Query_places</string>
    <string name="title_activity_single_list_item">MainActivity</string>
    <string name="title_activity_android_xmlparsing">AndroidXMLParsingAct</string>
    <string name="miles_1">(in miles)</string>
    <string name="miles_2">(in miles)</string>
    <string name="title_activity_search_result">SearchResult</string>
    <string name="title_activity_output">Output</string>
    <string name="title_activity_parser">Parser</string>
    <string name="title_activity_road_runner">RoadRunner</string>
    <string name="title_activity_simple_map">SimpleMap</string>
    <string name="title_activity_routewithstopover">Routewithstopover</string>

</resources>