<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/custom_show_map_button" >

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/directionsForm"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/startTextView"
                android:layout_width="fill_parent"
                android:layout_height="50sp"
                android:hint="@string/start_place"
                android:textSize="16sp"
                android:textColorHint="#FFFFFF"
                android:background="@drawable/clear_background" />

            <EditText
                android:id="@+id/endTextView"
                android:layout_width="fill_parent"
                android:layout_height="50sp"
                android:layout_below="@id/startTextView"
                android:hint="@string/end_place"
                android:textSize="16sp"
                android:textColorHint="#FFFFFF"
                android:background="@drawable/clear_background" />

            <Button
                android:id="@+id/createRouteButton"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_below="@id/endTextView"
                android:background="@drawable/custom_create_route_button" />

            <Button
                android:id="@+id/showItineraryButton"
                android:layout_width="100sp"
                android:layout_height="50sp"
                android:layout_alignParentLeft="true"
                android:layout_alignRight="@+id/MyLocationButton"
                android:layout_below="@+id/createRouteButton"
                android:background="@drawable/custom_itinerary_button"
                android:visibility="gone" />

            <Button
                android:id="@+id/showMapButton"
                 android:layout_width="100sp"
                android:layout_height="50sp"
                android:layout_alignLeft="@+id/map_button"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/map_button"
                android:background="@drawable/clear_background"
                android:text="@string/show_map"
                android:textColor="#FFFFFF"
                android:visibility="gone" />

            <Button
                android:id="@+id/clearButton"
             android:layout_width="100sp"
                android:layout_height="50sp"
                android:layout_alignBaseline="@+id/createRouteButton"
                android:layout_alignBottom="@+id/createRouteButton"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/map_button"
                android:background="@drawable/clear_background"
                android:text="@string/clear_route"
                android:textColor="#FFFFFF"
                android:visibility="visible" />

            <Button
                android:id="@+id/map_button"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_alignBaseline="@+id/clearButton"
                android:layout_alignBottom="@+id/clearButton"
                android:layout_centerHorizontal="true"
                android:background="@drawable/custom_rr_button"
                android:onClick="Map" />

            <Button
                android:id="@+id/MyLocationButton"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_below="@+id/endTextView"
                android:layout_toLeftOf="@+id/map_button"
                android:background="@drawable/custom_my_loc_button"
                android:onClick="MyLocationButton" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mapLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <com.mapquest.android.maps.MapView
            android:id="@+id/map"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/directionsForm"
            android:apiKey="@string/api_key"
            android:clickable="true"
            android:enabled="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/itineraryLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" >

        <EditText
            android:id="@+id/routepoints"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp" />

        <WebView
            android:id="@+id/itinerary"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </RelativeLayout>

</LinearLayout>